<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/image_desert"
            android:layout_width="77dp"
            android:layout_height="76dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/home_desert_desc"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/dessert_icon" />

        <ImageButton
            android:id="@+id/image_dinner"
            android:layout_width="76dp"
            android:layout_height="74dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="23dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/home_dinner_desc"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@drawable/dinner_icon"
            tools:srcCompat="@drawable/dinner_icon" />

        <ImageButton
            android:id="@+id/image_lunch"
            android:layout_width="79dp"
            android:layout_height="76dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/home_lunch_desc"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/lunch_icon" />

        <ImageButton
            android:id="@+id/image_breakfast"
            android:layout_width="78dp"
            android:layout_height="76dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="74dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/home_breakfast_desc"
            android:scaleType="centerInside"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/breakfast_icon" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="446dp"
            android:layout_height="264dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lunch" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="162dp"
            android:layout_height="115dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="left"
            android:inputType="textMultiLine"
            android:orientation="horizontal"
            android:text="new receipe available"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.467" />

        <TextView
            android:id="@+id/select_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="select category :"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/breakfast_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_breakfast" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:gravity="center"
            android:text="@string/lunch_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_lunch" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="83dp"
            android:layout_height="15dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="8dp"
            android:gravity="center|center_horizontal"
            android:text="@string/dinner_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_dinner" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="76dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:gravity="center"
            android:text="@string/desert_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_desert" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="Cheferone"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>